src/test/fun-test/semantic/VariableNotFound.java.err
Semantic error: foo not found, line 3, pos 19
