src/test/fun-test/semantic/VariableNotFound.java
class Main {
    void main() {
        int foo = foo;
    }
}